--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head><!-- ここから裏の設定ですよという宣言 -->
 	<meta charset="utf-8"><!-- 文字化け防止の記述 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- ややこしいので無視してOK -->
-  <title>しおん/Shion2521</title><!-- ページのタイトルを入れます -->
+  <title>About Shion!</title><!-- ページのタイトルを入れます -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head><!-- ここまでがうらの設定ですよという宣言 -->
 <body><!-- ここからページに表示される内容ですよという宣言 -->
-  <h1>しおん / Shion2521</h1>
+  <h1>About Shion!</h1>
   
   <h2>Profile</h2>
   
@@ -35,7 +34,6 @@
   
     <br>
   
-<script type="text/javascript" src="js/script.js"></script>
 </body><!-- ここまでがページに表示される内容ですよという宣言 -->
   
 </html><!-- ここまでがHTMLですという終わりの宣言 -->
