--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
   </p>
 
   <h2>Links</h2>
-    <a>各種リンクはこちらから!</a>
+    <p>
+    各種リンクはこちらから!
     <br>
-    ・<a href="https://twitter.com/shion2521">Twitter - Shion2521</a>
+    <a href="https://twitter.com/shion2521">Twitter - Shion2521</a>
+    
+    <a href="https://twitter.com/mixne_shion2521">Twitter - miXne</a>
     <br>
-    ・<a href="https://twitter.com/mixne_shion2521">Twitter - miXne</a>
-    <br>
-    ・<a href="https://mixne.hatenablog.com">miXne</a>
+    <a href="https://mixne.hatenablog.com">miXne</a>
   <br>
-    ・<a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber">Youtube</a>
+    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber">Youtube</a>
   <br>
-  ・<a href="https://qiita.com/shion21">Qiita</a>
+  <a href="https://qiita.com/shion21">Qiita</a>
   
-    <br>
+  </p>
   
 </body><!-- ここまでがページに表示される内容ですよという宣言 -->
   
