--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- ややこしいので無視してOK -->
   <title>About Shion!</title><!-- ページのタイトルを入れます -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head><!-- ここまでがうらの設定ですよという宣言 -->
 <body><!-- ここからページに表示される内容ですよという宣言 -->
   <h1>About Shion!</h1>
