--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
-<html><!-- ここからHTMLが始まりますというタグ -->
-<head><!-- ここから裏の設定ですよという宣言 -->
-	<meta charset="utf-8"><!-- 文字化け防止の記述 -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- ややこしいので無視してOK -->
-  <title>About Shion!</title><!-- ページのタイトルを入れます -->
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>About Shion2521!</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link type="text/css" rel="stylesheet" href="css/style.css"/>
-</head><!-- ここまでがうらの設定ですよという宣言 -->
-<body><!-- ここからページに表示される内容ですよという宣言 -->
+  <link type="text/css" rel="stylesheet" href="css/style.css"/>
+</head>
+<body>
   <h1>About Shion!</h1>
-  
-  <h2>Profile</h2>
-  
-  <p>
+  <div>
+    <p></p>
+    <h2>Profile</h2>
+    <p>
     はじめまして、しおんです。
     <br>
-    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。
+    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>とい     ブログの管理人でもあります。
     <br>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
+
   </p>
 
   <h2>Links</h2>
@@ -33,9 +34,7 @@
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber">Youtube</a>
   <br>
   <a href="https://qiita.com/shion21">Qiita</a>
-  
   </p>
-  
-</body><!-- ここまでがページに表示される内容ですよという宣言 -->
-  
-</html><!-- ここまでがHTMLですという終わりの宣言 -->
+  </div>
+</body>
+</html>
