--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>About Shion2521!</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  
+  <link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <h1>About Shion!</h1>
