--- a/index.html
+++ b/index.html
@@ -10,32 +10,20 @@
 </head>
 <body>
   <h1>About Shion!</h1>
-  <div>
-    <p></p>
-    <h2>Profile</h2>
+  <h2>Profile</h2>
     <p>
-    はじめまして、しおんです。
-    <br>
-    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>とい     ブログの管理人でもあります。
-    <br>
+    はじめまして、しおんです。<br/>
+    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br/>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
-
-  </p>
-
+    </p>
   <h2>Links</h2>
-    <p>
-    各種リンクはこちらから!
-    <br>
-    <a href="https://twitter.com/shion2521">Twitter - Shion2521</a>
-    
-    <a href="https://twitter.com/mixne_shion2521">Twitter - miXne</a>
-    <br>
-    <a href="https://mixne.hatenablog.com">miXne</a>
-  <br>
-    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber">Youtube</a>
-  <br>
-  <a href="https://qiita.com/shion21">Qiita</a>
-  </p>
-  </div>
-</body>
-</html>
+      
+  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a><br/><br/>
+    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br><br/>
+    <a href="https://mixne.hatenablog.com" class="links">miXne</a><br><br>
+    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br><br>
+    <a href="https://qiita.com/shion21" class="links">Qiita</a>
+
+  
+</body><!-- ここまでがページに表示される内容ですよという宣言 -->  
+</html><!-- ここまでがHTMLですという終わりの宣言 -->
