--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
   <title>About Shion2521!</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link type="text/css" rel="stylesheet" href="css/style.css"/>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <h1>About Shion!</h1>
+<div>
+<br>
   <h2>Profile</h2>
     <p>
-    はじめまして、しおんです。<br/>
-    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br/>
+    はじめまして、しおんです。<br>
+    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
     </p>
   <h2>Links</h2>
-      
-  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a><br/><br/>
-    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br><br/>
+  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a><br><br>
+    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br><br>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br><br>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br><br>
-    <a href="https://qiita.com/shion21" class="links">Qiita</a>
-
-  
-</body><!-- ここまでがページに表示される内容ですよという宣言 -->  
-</html><!-- ここまでがHTMLですという終わりの宣言 -->
+    <a href="https://qiita.com/shion21" class="links">Qiita</a><br><br>
+</div>
+</body>
+</html>
