--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
     </p>
   <h2>Links</h2>
-  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a>
-    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a>
-    <a href="https://mixne.hatenablog.com" class="links">miXne</a>
-    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a>
+  <p>各種リンクです。こちらから、アクセスしてください!</p>
+  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a><br>
+    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br>
+    <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
+    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
   <h2>Contacts</h2>
   <p><a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
