--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>About Shion2521!</title>
-  	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <h1>About Shion!</h1>
@@ -18,16 +18,19 @@
     アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
     </p>
+  
   <h2>Links</h2>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
-  <a href="https://twitter.com/shion2521" class="links">Twitter - Shion2521</a><br>
+  <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
+    <a href="https://qiita.com/shion21" class="links">Peing</a><br>  
   <h2>Contacts</h2>
-  <p><a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
+  <p><a href="https://peing.net/ja/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
   メールアドレス：shion.shion2521★gmail.com(★を@にしてください)</p>
+  <br>
 </div>
 </body>
 </html>
