--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159582631-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,7 +10,6 @@
 
   gtag('config', 'UA-159582631-2');
 </script>
-
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,5 +42,8 @@
   メールアドレス：shion.shion2521★gmail.com(★を@にしてください)</p>
   <br>
 </div>
+<footer>
+<p>Copyright ©shion2521 All rights reserved. </p>
+</footer>
 </body>
 </html>
