--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
-    <a href="https://qiita.com/shion21" class="links">Peing</a><br>  
+    <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>  
   <h2>Contacts</h2>
-  <p><a href="https://peing.net/ja/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
+  <p><a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
   メールアドレス：shion.shion2521★gmail.com(★を@にしてください)</p>
   <br>
 </div>
 <footer>
 <p>Copyright ©shion2521 All rights reserved. </p>
+<p>Powered by <a href="github.com">GitHub</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">here</a>!</p>
 </footer>
 </body>
 </html>
