--- a/index.html
+++ b/index.html
@@ -19,30 +19,63 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-  <h1>About Shion!</h1>
-<div>
+  
+     <h1>About Shion !</h1>
+
+  <header>
+  <div id="nav-drawer">
+      <input id="nav-input" type="checkbox" class="nav-unshown">
+    <label id="nav-open" for="nav-input"><span></span></label>
+      <label class="nav-unshown" id="nav-close" for="nav-input"></label>
+    <div id="nav-content">
+      <a class="header">目次</a>
+<ol class="page-contents">
+
+<li><a href="#i1" class="links">Profile</a></li>
+
+<li><a href="#i2" class="links">Links</a></li>
+  
+<li><a href="#i3" class="links">Contacs</a></li>  
+
+</ol>
+
+    </div><a class="header">目次</a>
+  </div>
+</header>
+  
+<div class="main">
 <br>
-  <h2>Profile</h2>
+  <h2 href="i1">Profile</h2>
     <p>
     はじめまして、しおんです。<br>
     アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
     </p>
   
-  <h2>Links</h2>
+  <h2 href="i2">Links</h2>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
+  <h3>Twitter</h3>
+  <p>@shion2521がメインで、@miXne_shionはブログの更新通知用です。</p>
   <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br>
+  <h3>miXne</h3>
+  <p>僕が、運営しているブログです。</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
+  <h3>Youtube</h3>
+  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新していきます！</p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
+  <h3>Qiita</h3>
+  <p>一応電子工作とかはこちらで取り扱っていきたいと思ってるんだけど...</p>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
+  <h3>Peing</h3>
+  <p>あんまり見てないけど、質問はここに投稿してね！</p>
     <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>  
-  <h2>Contacts</h2>
-  <p><a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
+  <h2 href="i3">Contacts</h2>
+  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
   メールアドレス：shion.shion2521★gmail.com(★を@にしてください)</p>
   <br>
 </div>
-<footer>
+  <footer>
 <p>Copyright ©shion2521 All rights reserved. </p>
 <p>Powered by <a href="github.com">GitHub</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">here</a>!</p>
 </footer>
