--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>About Shion2521!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   
-     <h1>About Shion !</h1>
+     <h1>About SHION!</h1>
 
   <header>
   <div id="nav-drawer">
@@ -28,14 +27,14 @@
     <label id="nav-open" for="nav-input"><span></span></label>
       <label class="nav-unshown" id="nav-close" for="nav-input"></label>
     <div id="nav-content">
-      <a class="header">目次</a>
+      <a class="h-links">目次</a>
 <ol class="page-contents">
 
-<li><a href="#i1" class="links">Profile</a></li>
+<li><a href="#i1" class="h-links">Profile</a></li>
 
-<li><a href="#i2" class="links">Links</a></li>
+<li><a href="#i2" class="h-links">Links</a></li>
   
-<li><a href="#i3" class="links">Contacs</a></li>  
+<li><a href="#i3" class="h-links">Contacs</a></li>  
 
 </ol>
 
@@ -55,29 +54,29 @@
   <h2 href="i2">Links</h2>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h3>Twitter</h3>
-  <p>@shion2521がメインで、@miXne_shionはブログの更新通知用です。</p>
+  <p>shion2521がメインで、miXne_shion2521はブログの更新通知用です。<br>どちらともフォローしてくれると嬉しいです！</p>
   <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
-    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne</a><br>
+    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
   <h3>miXne</h3>
-  <p>僕が、運営しているブログです。</p>
+  <p>僕が、運営しているブログです。<br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
   <h3>Youtube</h3>
-  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新していきます！</p>
+  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新していくので、チャンネル登録お願いします！</p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
   <h3>Qiita</h3>
-  <p>一応電子工作とかはこちらで取り扱っていきたいと思ってるんだけど...</p>
+  <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
   <h3>Peing</h3>
   <p>あんまり見てないけど、質問はここに投稿してね！</p>
     <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>  
   <h2 href="i3">Contacts</h2>
   <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
-  メールアドレス：shion.shion2521★gmail.com(★を@にしてください)</p>
+  メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
   <br>
 </div>
   <footer>
 <p>Copyright ©shion2521 All rights reserved. </p>
-<p>Powered by <a href="github.com">GitHub</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">here</a>!</p>
+<p>Powered by <a href="github.com">GitHub</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
 </body>
 </html>
