--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>About Shion2521!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
 </head>
 <body>
   
