--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
 </head>
 <body>
-  
-     <h1>About SHION!</h1>
+    <img class="resizeimageimg" src="photos/name.png" alt="海の写真" title="空と海">
 
   <header>
   <div id="nav-drawer">
