--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   	<title>About Shion2521!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+  <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
 </head>
 <body>
-    <img class="resizeimageimg" src="photos/name.png" alt="海の写真" title="空と海">
+    <img class="resizeimageimg" src="https://shion2521.github.io/photos/name.png" alt="ヘッダー" title="ヘッダー">
 
   <header>
   <div id="nav-drawer">
@@ -46,7 +47,7 @@
 <br>
   <h2 href="i1">Profile</h2>
     <p>
-    はじめまして、しおんです。<br>
+      はじめまして、しおん/shion2521です。<br>
     アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>
     詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
     </p>
@@ -58,10 +59,10 @@
   <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
   <h3>miXne</h3>
-  <p>僕が、運営しているブログです。<br>RSSやFeedlyでの購読もよろしくお願いします！</p>
+  <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。<br>って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
   <h3>Youtube</h3>
-  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新していくので、チャンネル登録お願いします！</p>
+  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、チャンネル登録お願いします！</p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
   <h3>Qiita</h3>
   <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
@@ -76,7 +77,7 @@
 </div>
   <footer>
 <p>Copyright ©shion2521 All rights reserved. </p>
-<p>Powered by <a href="github.com">GitHub</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
+<p>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
 </body>
 </html>
