--- a/index.html
+++ b/index.html
@@ -7,77 +7,52 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-159582631-2');
 </script>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>About Shion2521!</title>
+  	<title>shion2521</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-  <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
+    <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
 </head>
+<!-- START -->
 <body>
-    <img class="resizeimageimg" src="https://shion2521.github.io/photos/name.png" alt="ヘッダー" title="ヘッダー">
-
-  <header>
-  <div id="nav-drawer">
-      <input id="nav-input" type="checkbox" class="nav-unshown">
-    <label id="nav-open" for="nav-input"><span></span></label>
-      <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-    <div id="nav-content">
-      <a class="h-links">目次</a>
-<ol class="page-contents">
-
-<li><a href="#i1" class="h-links">Profile</a></li>
-
-<li><a href="#i2" class="h-links">Links</a></li>
-  
-<li><a href="#i3" class="h-links">Contacs</a></li>  
-
-</ol>
-
-    </div><a class="header">目次</a>
-  </div>
-</header>
-  
-<div class="main">
+<img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<!-- MAIN CONTENTS -->
+<main>
 <br>
-  <h2 href="i1">Profile</h2>
-    <p>
-      はじめまして、しおん/shion2521です。<br>
-    アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>
-    詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!
-    </p>
-  
-  <h2 href="i2">Links</h2>
+<!-- i1-PROFILE -->
+<h2 href="i1">Profile</h2>
+  <p>はじめまして、しおん/shion2521です。<br>アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!</p>
+<!-- i2-LINKS -->
+<h2 href="i2">Links</h2>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h3>Twitter</h3>
-  <p>shion2521がメインで、miXne_shion2521はブログの更新通知用です。<br>どちらともフォローしてくれると嬉しいです！</p>
-  <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
+    <p>shion2521がメインで、miXne_shion2521はブログの更新通知用です。<br>どちらともフォローしてくれると嬉しいです！</p>
+    <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
   <h3>miXne</h3>
-  <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。<br>って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
+    <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
   <h3>Youtube</h3>
-  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、チャンネル登録お願いします！</p>
+    <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、チャンネル登録お願いします！</p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
   <h3>Qiita</h3>
-  <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
+    <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
   <h3>Peing</h3>
-  <p>あんまり見てないけど、質問はここに投稿してね！</p>
+    <p>あんまり見てないけど、質問はここに投稿してね！</p>
     <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>  
-  <h2 href="i3">Contacts</h2>
-  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>
-  メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
-  <br>
-</div>
-  <footer>
-<p>Copyright ©shion2521 All rights reserved. </p>
-<p>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
+<!-- i3-CONTACTS -->
+<h2 href="i3">Contacts</h2>
+  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p><br>
+</main>
+<!-- FOOTER -->
+<footer>
+<p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
+<!-- END -->
 </body>
 </html>
