--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
 <img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
 <nav>
 <ul>
-  <li class=”current”><a href=”https://shion2521.github.io”>Top</a></li>
-  <li><a href=”#https://shion2521.github.io/about.html”>About</a></li>
-  <li><a href=”https://mixne.hatenablog.com”>miXne</a></li>
-  <li><a href=”https://twitter.com/shion2521”>Twitter</a></li>
-<li><a href=”https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed”>Feedly</a></li>
+  <li class=”current”><a href="https://shion2521.github.io">Top</a></li>
+  <li><a href="https://shion2521.github.io/about.html">About</a></li>
+  <li><a href="https://mixne.hatenablog.com">miXne</a></li>
+  <li><a href="https://twitter.com/shion2521">Twitter</a></li>
+<li><a href="https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed">Feedly</a></li>
 </ul>
 </nav>
 <!-- MAIN CONTENTS -->
