--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   	<title>shion2521</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-    <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
+    <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
 <body>
+<div id="wrapper">
 <!-- HEADER -->
 <img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
 <nav>
@@ -27,7 +28,7 @@
   <li><a href="https://shion2521.github.io/about.html">About</a></li>
   <li><a href="https://mixne.hatenablog.com">miXne</a></li>
   <li><a href="https://twitter.com/shion2521">Twitter</a></li>
-<li><a href="https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed">Feedly</a></li>
+<li><a href=”https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed”>Feedly</a></li>
 </ul>
 </nav>
 
@@ -65,5 +66,6 @@
 <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
 <!-- END -->
+</div>
 </body>
 </html>
