--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 </head>
 <!-- START -->
 <body>
+<div id="wrapper">
 <!-- HEADER -->
 <img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
 <nav>
@@ -44,5 +45,6 @@
 <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
 <!-- END -->
+</div>
 </body>
 </html>
