--- a/index.html
+++ b/index.html
@@ -31,35 +31,37 @@
 <li><a href=”https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed”>Feedly</a></li>
 </ul>
 </nav>
-
 <!-- MAIN CONTENTS -->
 <main>
-<br>
 <!-- i1-PROFILE -->
-<h2 href="i1">Profile</h2>
+<h1 href="i1">Profile</h1>
   <p>はじめまして、しおん/shion2521です。<br>アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!</p>
+</main>
 <!-- i2-LINKS -->
-<h2 href="i2">Links</h2>
+<main>
+<h1 href="i2">Links</h1>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
-  <h3>Twitter</h3>
+  <h2>Twitter</h2>
     <p>shion2521がメインで、miXne_shion2521はブログの更新通知用です。<br>どちらともフォローしてくれると嬉しいです！</p>
     <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
-  <h3>miXne</h3>
+  <h2>miXne</h2>
     <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
-  <h3>Youtube</h3>
+  <h2>Youtube</h2>
     <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、チャンネル登録お願いします！</p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
-  <h3>Qiita</h3>
+  <h2>Qiita</h2>
     <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
-  <h3>Peing</h3>
+  <h2>Peing</h2>
     <p>あんまり見てないけど、質問はここに投稿してね！</p>
-    <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>  
+    <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>
+</main>
 <!-- i3-CONTACTS -->
-<h2 href="i3">Contacts</h2>
-  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p><br>
+<main>
+<h1 href="i3">Contacts</h1>
+  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
 </main>
 <!-- FOOTER -->
 <footer>
