--- a/about.html
+++ b/about.html
@@ -34,9 +34,11 @@
 <!-- MAIN CONTENTS -->
 <main>
 <br>
-<h2>このサイトについて</h2>
+<h1>このサイトについて</h1>
 <p>このサイトは、miXneの管理人であるしおん/shion2521についてのまとめサイトです。<br>それから、僕のWeb作りの練習用サイトです(笑)</p>
-<h2>確認済み動作環境</h2>
+</main>
+<main>
+<h1>確認済み動作環境</h1>
 <p>①Safari(13.12) on MacBook Air(MacOS 10.13.6)<br>③GoogleChrome(84.0.4147.135) on MacBook Air(MacOS 10.13.6)<br>②Safari(604.1) on iPhone8(iOS 13.6.1)<br>これ以外の環境ではでは、動作確認をしていません。うまく動かない場合は、Twitterにてしおんに報告してください。</p>
 <br>
 </main>
