--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>shion2521</title>
+  	<title>About - shion2521</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
     <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
