--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 世界一汚いサイトw -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,11 +10,11 @@
   gtag('js', new Date());
   gtag('config', 'UA-159582631-2');
 </script>
+<script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>shion2521</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
@@ -21,11 +22,11 @@
 <body>
 <div id="wrapper">
 <!-- HEADER -->
-<img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
 <nav>
 <ul>
   <li class=”current”><a href="https://shion2521.github.io">Top</a></li>
-  <li><a href="https://shion2521.github.io/about.html">About</a></li>
+  <li><a href="https://shion2521.github.io/about">About</a></li>
   <li><a href="https://mixne.hatenablog.com">miXne</a></li>
   <li><a href="https://twitter.com/shion2521">Twitter</a></li>
 <li><a href=”https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed”>Feedly</a></li>
@@ -41,15 +42,15 @@
 <main>
 <h1 href="i2">Links</h1>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
-  <h2>Twitter</h2>
-    <p>shion2521がメインで、miXne_shion2521はブログの更新通知用です。<br>どちらともフォローしてくれると嬉しいです！</p>
+  <h2><i class="fab fa-twitter"></i>Twitter</h2>
+  <p>shion2521が<orange>メイン</orange>で、miXne_shion2521は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！</p>
     <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
     <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
-  <h2>miXne</h2>
+  <h2><i class="fas fa-blog"></i> miXne</h2>
     <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
-  <h2>Youtube</h2>
-    <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、チャンネル登録お願いします！</p>
+  <h2><i class="fab fa-youtube"></i>Youtube</h2>
+  <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、<orange>チャンネル登録お願いします！</orange></p>
     <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
   <h2>Qiita</h2>
     <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
@@ -61,11 +62,11 @@
 <!-- i3-CONTACTS -->
 <main>
 <h1 href="i3">Contacts</h1>
-  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>のDMが一番反応早いと思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
+  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
 </main>
 <!-- FOOTER -->
 <footer>
-<p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
+  <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
 <!-- END -->
 </div>
