--- a/about.html
+++ b/about.html
@@ -28,8 +28,6 @@
   <li><a href="https://shion2521.github.io/about.html">About</a></li>
   <li><a href="https://mixne.hatenablog.com">miXne</a></li>
   <li><a href="https://twitter.com/shion2521">Twitter</a></li>
-<li><a href="https://feedly.com/i/subscription/feed%2Fhttp%3A%2F%2Fmixne.hatenablog.com%2Ffeed">Feedly</a></li>
-</ul>
 </nav>
 <!-- MAIN CONTENTS -->
 <main>
@@ -38,7 +36,7 @@
 </main>
 <main>
 <h1>確認済み動作環境</h1>
-<p>①Safari(13.12) on MacBook Air(MacOS 10.13.6)<br>③GoogleChrome(84.0.4147.135) on MacBook Air(MacOS 10.13.6)<br>②Safari(604.1) on iPhone8(iOS 13.6.1)<br>これ以外の環境ではでは、動作確認をしていません。うまく動かない場合は、Twitterにてしおんに報告してください。</p>
+<p>①Safari(13.12) on MacBook Air(MacOS 10.13.6)<br>③GoogleChrome(84.0.4147.135) on MacBook Air(MacOS 10.13.6)<br>②Safari(604.1) on iPhone8(iOS 13.6.1)<br>これ以外の環境では、<orange>動作確認をしていません</orange>。<br>うまく動かない場合は、Twitterにてしおんに報告してください。</p>
 </main>
 <!-- FOOTER -->
 <footer>
