--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- 世界一汚いサイトw -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,13 +32,13 @@
 </nav>
 <!-- MAIN CONTENTS -->
 <main>
-<!-- i1-PROFILE -->
-<h1 href="i1">Profile</h1>
+<!-- PROFILE -->
+<h1>Profile</h1>
   <p>はじめまして、しおん/shion2521です。<br>アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!</p>
 </main>
-<!-- i2-LINKS -->
+<!-- LINKS -->
 <main>
-<h1 href="i2">Links</h1>
+<h1>Links</h1>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h2><i class="fab fa-twitter"></i>Twitter</h2>
   <p>shion2521が<orange>メイン</orange>で、miXne_shion2521は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！</p>
@@ -58,9 +57,9 @@
     <p>あんまり見てないけど、質問はここに投稿してね！</p>
     <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>
 </main>
-<!-- i3-CONTACTS -->
+<!-- CONTACTS -->
 <main>
-<h1 href="i3">Contacts</h1>
+<h1>Contacts</h1>
   <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
 </main>
 <!-- FOOTER -->
