--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>shion2521</title>
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
