--- a/about.html
+++ b/about.html
@@ -9,13 +9,14 @@
   gtag('js', new Date());
   gtag('config', 'UA-159582631-2');
 </script>
+<script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>About - shion2521</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  	<title>shion2521</title>
 	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-    <meta name=”description” content=” miXneの管理人であるしおん/shion2521についてのまとめサイトです。” />
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+    <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
 <body>
