--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
 <body>
 <div id="wrapper">
 <!-- HEADER -->
+<header>
 <img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
 <nav>
 <ul>
-  <li class=”current”><a href="https://shion2521.github.io">Top</a></li>
-  <li><a href="https://shion2521.github.io/about">About</a></li>
-  <li><a href="https://mixne.hatenablog.com">miXne</a></li>
-  <li><a href="https://twitter.com/shion2521">Twitter</a></li>
+  <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
+  <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
+  <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
+  <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
 </ul>
 </nav>
+</header>
 <!-- MAIN CONTENTS -->
 <main>
 <!-- PROFILE -->
