--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>shion2521</title>
-    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
@@ -23,7 +23,8 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-<img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<img src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<menu>
 <nav>
 <ul>
   <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
@@ -32,6 +33,7 @@
   <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
 </ul>
 </nav>
+</menu>
 </header>
 <!-- MAIN CONTENTS -->
 <main>
