--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-<img src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header">
 <menu>
 <nav>
 <ul>
