--- a/about.html
+++ b/about.html
@@ -14,22 +14,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
   	<title>shion2521</title>
-	<link type="text/css" rel="stylesheet" href="css/reset.css"/>
-	<link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
 <body>
 <div id="wrapper">
 <!-- HEADER -->
-<img class="header" src="https://shion2521.github.io/photos/name.png" alt="header" title="header">
+<header>
+<img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header">
+<menu>
 <nav>
 <ul>
-  <li class=”current”><a href="https://shion2521.github.io">Top</a></li>
-  <li><a href="https://shion2521.github.io/about.html">About</a></li>
-  <li><a href="https://mixne.hatenablog.com">miXne</a></li>
-  <li><a href="https://twitter.com/shion2521">Twitter</a></li>
+  <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
+  <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
+  <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
+  <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
+</ul>
 </nav>
+</menu>
+</header>
 <!-- MAIN CONTENTS -->
 <main>
 <h1>このサイトについて</h1>
