--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-<img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header">
+  <a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
@@ -67,7 +67,6 @@
 <footer>
   <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
-<!-- END -->
 </div>
 </body>
 </html>
