--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-<img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header">
+<a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
@@ -38,7 +38,7 @@
 <!-- MAIN CONTENTS -->
 <main>
 <h1>このサイトについて</h1>
-<p>このサイトは、miXneの管理人であるしおん/shion2521についてのまとめサイトです。<br>それから、僕のWeb作りの練習用サイトです(笑)</p>
+<p>このサイトは、miXneの管理人であるしおん/shion2521についてのまとめサイトです。<br>それから、将来miXneをWPへ移行するときにHTMLの知識とかがほしいのでその練習サイトでもあります。</p>
 </main>
 <main>
 <h1>確認済み動作環境</h1>
