--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   	<title>shion2521</title>
-  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+    <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" >
+<link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" >
+<link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
@@ -31,6 +35,8 @@
   <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
   <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
   <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
+  
+
 </ul>
 </nav>
 </menu>
@@ -56,6 +62,9 @@
   <h2>Qiita</h2>
     <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
     <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
+  <h2>読書メーター</h2>
+    <p>読んだ本を記録するようにしています。もし良かったらみてください。</p>
+    <a href="https://bookmeter.com/users/932111" class="links">読書メーター</a><br>
   <h2>Peing</h2>
     <p>あんまり見てないけど、質問はここに投稿してね！</p>
     <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>
