--- a/about.html
+++ b/about.html
@@ -12,10 +12,14 @@
 <script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   	<title>shion2521</title>
-  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+    <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" >
+<link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" >
+<link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
@@ -23,7 +27,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-<a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
+  <a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
