--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
   	<title>shion2521</title>
-    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-    <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-    <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" >
-<link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" >
-<link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
+  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
 </head>
 <!-- START -->
@@ -35,8 +32,6 @@
   <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
   <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
   <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
-  
-
 </ul>
 </nav>
 </menu>
@@ -51,23 +46,23 @@
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h2><i class="fab fa-twitter"></i>Twitter</h2>
   <p>shion2521が<orange>メイン</orange>で、miXne_shion2521は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！</p>
-    <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521</a><br>
-    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521</a><br>
-  <h2><i class="fas fa-blog"></i> miXne</h2>
+    <a href="https://twitter.com/shion2521" class="links"><i class="fas fa-link"></i>Twitter - shion2521</a><br>
+  <a href="https://twitter.com/mixne_shion2521" class="links"><i class="fas fa-link"></i>Twitter - miXne_shion2521</a><br>
+  <h2><i class="fas fa-blog"></i>miXne</h2>
     <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
-    <a href="https://mixne.hatenablog.com" class="links">miXne</a><br>
+    <a href="https://mixne.hatenablog.com" class="links"><i class="fas fa-link"></i>miXne</a><br>
   <h2><i class="fab fa-youtube"></i>Youtube</h2>
   <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、<orange>チャンネル登録お願いします！</orange></p>
-    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube</a><br>
+    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links"><i class="fas fa-link"></i>Youtube</a><br>
   <h2>Qiita</h2>
     <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
-    <a href="https://qiita.com/shion21" class="links">Qiita</a><br>
-  <h2>読書メーター</h2>
-    <p>読んだ本を記録するようにしています。もし良かったらみてください。</p>
-    <a href="https://bookmeter.com/users/932111" class="links">読書メーター</a><br>
+    <a href="https://qiita.com/shion21" class="links"><i class="fas fa-link"></i>Qiita</a><br>
   <h2>Peing</h2>
     <p>あんまり見てないけど、質問はここに投稿してね！</p>
-    <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>
+    <a href="https://peing.net/ja/shion2521" class="links"><i class="fas fa-link"></i>Peing</a><br>
+  <h2>読書メーター</h2>
+    <p>最近再開したので、フォローお願いします！</p>
+    <a href="https://bookmeter.com/users/932111" class="links"><i class="fas fa-link"></i>読書メーター</a>
 <!-- CONTACTS -->
 <h1>Contacts</h1>
   <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
