--- a/index.html
+++ b/index.html
@@ -71,3 +71,14 @@
    <h2>Peing</h2>
      <p>あんまり見てないけど、質問はここに投稿してね！</p>
      <a href="https://peing.net/ja/shion2521" class="links">Peing</a><br>
+<!-- CONTACTS -->
+<h1>Contacts</h1>
+  <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
+</main>
+<!-- FOOTER -->
+<footer>
+  <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
+</footer>
+</div>
+</body>
+</html>
