--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
   gtag('config', 'UA-159582631-2');
 </script>
  <script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
- 	<meta charset="utf-8">
+ 	<title>shion2521</title><meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
+    <meta charset="utf-8">
  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-   	<title>shion2521</title>
-   <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-     <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-     <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" >
- <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" >
- <link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
-     <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
- </head>
- <!-- START -->
+    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+    <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+    <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" ><link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" ><link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
+</head>
+<!-- START -->
 <body>
 <div id="wrapper">
 <!-- HEADER -->
@@ -30,15 +27,13 @@
 <menu>
 <nav>
 <ul>
-  <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
+   <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
    <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
    <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
    <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
-
-
- </ul>
- </nav>
- </menu>
+</ul>
+</nav>
+</menu>
 </header>
 <!-- MAIN CONTENTS -->
 <main>
