--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h2>Twitter</h2>
   <p>shion2521が<orange>メイン</orange>で、miXne_shion2521は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！</p>
-  <a href="https://twitter.com/shion2521" class="links"><i class="fas fa-link"></i>Twitter - shion2521</a><br><br>
-    <a href="https://twitter.com/mixne_shion2521" class="links"><i class="fas fa-link"></i>Twitter - miXne_shion2521</a><br>
+  <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521<i class="fas fa-link"></i></a><br><br>
+    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521<i class="fas fa-link"></i></a><br>
   <h2>miXne</h2>
     <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
-    <a href="https://mixne.hatenablog.com" class="links"><i class="fas fa-link"></i>miXne</a><br>
+    <a href="https://mixne.hatenablog.com" class="links">miXne<i class="fas fa-link"></i></a><br>
   <h2>Youtube</h2>
   <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、<orange>チャンネル登録お願いします！</orange></p>
-    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links"><i class="fas fa-link"></i>Youtube</a><br>
+    <a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A?view_as=subscriber" class="links">Youtube<i class="fas fa-link"></i></a><br>
    <h2>Qiita</h2>
      <p>一応電子工作・RaspberryPiとかはこっちで取り扱っていきたいと思ってるんだけどね...</p>
-     <a href="https://qiita.com/shion21" class="links"><i class="fas fa-link"></i>Qiita</a><br>
+     <a href="https://qiita.com/shion21" class="links">Qiita<i class="fas fa-link"></i></a><br>
    <h2>読書メーター</h2>
      <p>読んだ本を記録するようにしています。もし良かったらみてください。</p>
-     <a href="https://bookmeter.com/users/932111" class="links"><i class="fas fa-link"></i>読書メーター</a><br>
+     <a href="https://bookmeter.com/users/932111" class="links">読書メーター<i class="fas fa-link"></i></a><br>
    <h2>Peing</h2>
      <p>あんまり見てないけど、質問はここに投稿してね！</p>
-     <a href="https://peing.net/ja/shion2521" class="links"><i class="fas fa-link"></i>Peing</a><br>
+     <a href="https://peing.net/ja/shion2521" class="links">Peing<i class="fas fa-link"></i></a><br>
 <!-- CONTACTS -->
 <h1>Contacts</h1>
   <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
