--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 <h1>Links</h1>
   <p>各種リンクです。こちらから、アクセスしてください!</p>
   <h2>Twitter</h2>
-  <p>shion2521が<orange>メイン</orange>で、miXne_shion2521は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！</p>
-  <a href="https://twitter.com/shion2521" class="links">Twitter - shion2521<i class="fas fa-link"></i></a><br><br>
-    <a href="https://twitter.com/mixne_shion2521" class="links">Twitter - miXne_shion2521<i class="fas fa-link"></i></a><br>
+  <p><a href="https://twitter.com/shion2521">shion2521</a>が<orange>メイン</orange>で、<a href="https://twitter.com/mixne_shion2521">miXne_shion2521</a>は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！
   <h2>miXne</h2>
     <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne<i class="fas fa-link"></i></a><br>
