--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2>Twitter</h2>
   <p><a href="https://twitter.com/shion2521">shion2521</a>が<orange>メイン</orange>で、<a href="https://twitter.com/mixne_shion2521">miXne_shion2521</a>は<orange>ブログの更新通知用</orange>です。<br>どちらともフォローしてくれると嬉しいです！
   <h2>miXne</h2>
-    <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、一週間に一度更新している日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
+    <p>僕が、運営しているブログです。<br>アニメ、PC、電子工作が好きなのでそれらを中心に書いています。って言いたいところなんですけど、日記の方が中心になってしまいました...<br><br>RSSやFeedlyでの購読もよろしくお願いします！</p>
     <a href="https://mixne.hatenablog.com" class="links">miXne<i class="fas fa-link"></i></a><br>
   <h2>Youtube</h2>
   <p>いまだに、一本しか動画を投稿していないYoutube。<br>暇を見て更新したいとは思っているので、<orange>チャンネル登録お願いします！</orange></p>
