--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
   gtag('js', new Date());
   gtag('config', 'UA-159582631-2');
 </script>
- <script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
- 	<title>shion2521</title><meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
-    <meta charset="utf-8">
- 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-    <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
-    <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" ><link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" ><link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
+<script src="https://kit.fontawesome.com/265b47f056.js" crossorigin="anonymous"></script>
+  <title>shion2521</title>
+  <meta name=”description” content="miXneの管理人であるしおん/shion2521についてのまとめサイトです。" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="css/reset.css"/>
+  <link type="text/css" rel="stylesheet" href="css/main-style.css"/>
+  <link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 320px) and (max-width: 639px)" ><link href="tablet.css" rel="stylesheet" type="text/css" media="(min-width: 640px) and (max-width: 1023px)" ><link href="desktop.css" rel="stylesheet" type="text/css" media="(min-width: 1024px)" >
 </head>
-<!-- START -->
 <body>
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-  <a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
+  <a href="/"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
-   <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
-   <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
+   <li class=”current”><a href="/"><i class="fas fa-home" alt="top"></i></a></li>
+   <li><a href="/about"><i class="fas fa-question"></i></a></li>
    <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
    <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
 </ul>
@@ -37,7 +37,6 @@
 </header>
 <!-- MAIN CONTENTS -->
 <main>
-<!-- PROFILE -->
 <h1>Profile</h1>
   <p>はじめまして、しおん/shion2521です。<br>アニメやPCが好きな高校一年生で、<a href="https://mixne.hatenablog.com">miXne</a>といブログの管理人でもあります。<br>詳しくは、<a href="https://mixne.hatenablog.com/entry/profile">こちら</a>をみてくださいね!</p>
 <!-- LINKS -->
@@ -60,11 +59,9 @@
    <h2>Peing</h2>
      <p>あんまり見てないけど、質問はここに投稿してね！</p>
      <a href="https://peing.net/ja/shion2521" class="links">Peing<i class="fas fa-link"></i></a><br>
-<!-- CONTACTS -->
 <h1>Contacts</h1>
   <p>しおんの<a href="https://twitter.com/shion2521">Twitter</a>の<orange>DMが一番反応早い</orange>と思います。<br>メールアドレス：shion.shion2521★gmail.com(★⇨@)</p>
 </main>
-<!-- FOOTER -->
 <footer>
   <p>Copyright ©shion2521 All rights reserved. <br>Powered by <a href="https://pages.github.com">GitHub Pages</a>. | Script is <a href="https://github.com/shion2521/shion2521.github.io">Here</a>!</p>
 </footer>
