--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-  <a href="/"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
+  <a href="/"><img src="https://github.com/shion2521/shion2521.github.io/blob/master/photos/site-logo.png?raw=true" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
