--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-  <a href="https://shion2521.github.io"><img src="https://shion2521.github.io/photos/site-logo.png" alt="header" title="header"></a>
+  <a href="https://shion2521.github.io"><img src="photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
