--- a/old/index.html
+++ b/old/index.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-  <a href="/"><img src="photos/site-logo.png" alt="header" title="header"></a>
+  <a href="/"><img src="/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
