--- a/old/about.html
+++ b/old/about.html
@@ -27,12 +27,12 @@
 <div id="wrapper">
 <!-- HEADER -->
 <header>
-  <a href="https://shion2521.github.io"><img src="photos/site-logo.png" alt="header" title="header"></a>
+  <a href="/"><img src="/photos/site-logo.png" alt="header" title="header"></a>
 <menu>
 <nav>
 <ul>
-  <li class=”current”><a href="https://shion2521.github.io"><i class="fas fa-home" alt="top"></i></a></li>
-  <li><a href="https://shion2521.github.io/about"><i class="fas fa-question"></i></a></li>
+  <li class=”current”><a href="/"><i class="fas fa-home" alt="top"></i></a></li>
+  <li><a href="/about"><i class="fas fa-question"></i></a></li>
   <li><a href="https://mixne.hatenablog.com"><i class="fas fa-blog"></i></a></li>
   <li><a href="https://twitter.com/shion2521"><i class="fab fa-twitter"></i></a></li>
 </ul>
