--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>shion2521のリンク</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
   <h1>Links</h1>
