--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
   <li><a href="https://qiita.com/shion21">Qiita</a></li>
   <li><a href="https://bookmeter.com/users/932111">読書メーター</a></li>
 </ul>
+        <!-- Moons APPS ad start -->
+<script class="moons_apps_ad_banner moons_apps_ad_auto" src="https://apps.moons14.com/ad/js/banner.js"></script>
+        <!-- Moons APPS ad end -->
 </body>
 </html>
