--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
   <li><a href="https://mixne.hatenablog.com">mixne</a></li>
   <li><a href="https://twitter.com/shion2521">Twitter</a></li>
-  <li><a href="https://mstdn.guru/@shion2521">Mastdon</a></li>
+  <li><a href="https://mstdn.guru/@shion2521" rel="me">Mastdon</a></li>
   <li><a href="https://discord.com/users/394369935104671755">Discord</a></li>
   <li><a href="https://www.youtube.com/channel/UCVrjp71yN6LE0hxZS0c5P0A">Youtube</a></li>
   <li><a href="https://qiita.com/shion21">Qiita</a></li>
