--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <li><a href="https://qiita.com/shion21">Qiita</a></li>
   <li><a href="https://bookmeter.com/users/932111">読書メーター</a></li>
 </ul>
-<p>オススメのサイト！</p>
+<h1>オススメのサイト！</h1>
         <!-- Moons APPS ad start -->
 <script class="moons_apps_ad_banner moons_apps_ad_auto" src="https://apps.moons14.com/ad/js/banner.js"></script>
         <!-- Moons APPS ad end -->
