--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>shion2521のリンク</title>
+<title>shionchaのリンク</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -16,9 +16,5 @@
   <li><a href="https://qiita.com/shion21">Qiita</a></li>
   <li><a href="https://bookmeter.com/users/932111">読書メーター</a></li>
 </ul>
-<h1>オススメのサイト！</h1>
-        <!-- Moons APPS ad start -->
-<script class="moons_apps_ad_banner moons_apps_ad_auto" src="https://apps.moons14.com/ad/js/banner.js"></script>
-        <!-- Moons APPS ad end -->
 </body>
 </html>
